--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   get: ^4.6.5
   data_table_2: ^2.5.6
   velocity_x: ^4.1.1
+  firebase_core: ^2.14.0
+  firebase_auth: ^4.6.3
+  firebase_storage: ^11.2.4
+  cloud_firestore: ^4.8.2
+  image_picker: ^1.0.4
+  file: ^7.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
